fixing a small bug regarding empty stars fixed a small alignment issue in the similar product card

--- a/src/components/Product/Card/Card.module.scss
+++ b/src/components/Product/Card/Card.module.scss
@@ -54,8 +54,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    // margin-right: 16px;
-    // margin-left: 16px;
+    margin-right: 16px;
+    margin-left: 16px;
     width: 236px;
     margin-bottom: 16px;
 }
